--- a/src/components/organisms/Comment/Comment.scss
+++ b/src/components/organisms/Comment/Comment.scss
@@ -1,21 +1,19 @@
 .Comment {
   margin: 10px;
   display: flex;
-  flex-direction: row;
 
   &-main {
-    display: flex;
-    flex-direction: column;
     border: 1px solid #cfd8dc;
     width: 100%;
     border-radius: 5px;
     margin-left: 10px;
+    overflow: scroll;
   }
 
   &-author {
     background-color: #eceff1;
     font-size: 20px;
-    padding: 2px 5px;
+    padding: 2px 10px;
     margin: 0;
   }
 
@@ -26,6 +24,5 @@
 
   &-body {
     padding: 0 10px;
-    word-wrap: break-word;
   }
 }
